tests/negative/duplicate_struct.sans
// expect-error: PARSE ERR
struct Foo { x:I }
struct Foo { y:I }
main() I { 0 }
